Fixed navbar missing buttons and title spacing

--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -27,6 +27,7 @@ nav img {
   align-items: center;
   font-size: 50px;
   font-family: 'Montserrat', sans-serif;
+  padding-left: 100px;
 }
 
 .nav-links button {
